@@ -30,6 +30,7 @@ private Q_SLOTS:
 
 signals:
     void loadEditor(const KService::List offers, KUrl target);
+    void loadMetaDataEditor(KUrl target);
 };
 
 #endif
